ContentSite: Comment feed fixups
Signed-off-by: Matthias Kestenholz <matthias@spinlock.ch>

--- a/i18n/locale/de/LC_MESSAGES/swisdk.po
+++ b/i18n/locale/de/LC_MESSAGES/swisdk.po
@@ -392,3 +392,9 @@ msgstr "In %s"
 
 msgid "right now"
 msgstr "Jetzt"
+
+msgid "Comments"
+msgstr "Kommentare"
+
+msgid "Comments for '%s'"
+msgstr "Kommentare für '%s'"
