Fixed typo in french gettext file
Signed-off-by: Matthias Kestenholz <matthias@spinlock.ch>

--- a/i18n/locale/fr/LC_MESSAGES/swisdk.po
+++ b/i18n/locale/fr/LC_MESSAGES/swisdk.po
@@ -174,7 +174,7 @@ msgstr "Effacer"
 
 #: modules/inc.form.items.php:828
 msgid "Submit"
-msgstr "Envoier"
+msgstr "Envoyer"
 
 #: modules/inc.form.items.php:850
 msgid "Reset"
